--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -40,6 +40,20 @@ main section.categories-show {
         transition: all 0.3s;
       }
 
+      aside.sold_out {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: red;
+        color: whitesmoke;
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.8em;
+        opacity: 0.3;
+        transition: all 0.3s;
+      }
+
       aside.price {
         position: absolute;
         top: 0;
@@ -56,6 +70,10 @@ main section.categories-show {
         border-color: #999;
 
         footer {
+          opacity: 1.0;
+        }
+
+        aside.sold_out {
           opacity: 1.0;
         }
       }
