--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -16,7 +16,7 @@
       Details &raquo;
     <% end %>
   </footer>
-  <% if product.quantity == 0 %>
+  <% if !product.quantity? %>
   <aside class="sold_out">
   SOLD OUT
   </aside>
