--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -29,13 +29,17 @@
       <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
+            <% if current_user %>
+            <span class="text"><%= fa_icon 'lock', text: current_user.first_name %></span>
+            <% end %>
+            <% unless current_user %>
             <span class="text"><%= fa_icon 'lock', text: 'User' %></span>
+            <% end %>
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'Register', "/signup" %></li>
             <% unless current_user %>
+            <li><%= link_to 'Register', "/signup" %></li>
             <li><%= link_to 'Login', "/login" %></li>
             <% end %>
             <% if current_user %> 
