--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,16 +7,23 @@
 
   <div class="row">
     <div class="col-sm-6 col-sm-offset-1">
+    <div class="form-group">
     <%= form_for :user, url: '/users' do |f| %>
 
-      First Name: <%= f.text_field :first_name %>
-      Last Name: <%= f.text_field :last_name %>
-      Email: <%= f.text_field :email %>
-      Password: <%= f.password_field :password %>
-      Password Confirmation: <%= f.password_field :password_confirmation %>
+      <%= f.label :first_name %> 
+      <%= f.text_field :first_name, class: 'form-control' %>
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name %>
+      <%= f.label :email %>
+      <%= f.text_field :email, class: 'form-control' %>
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
       <%= f.submit "Submit" %>
     
     <% end %>
+    </div>
     </div>
   </div>
 
