--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,14 +13,14 @@
       <%= f.label :first_name %> 
       <%= f.text_field :first_name, class: 'form-control' %>
       <%= f.label :last_name %>
-      <%= f.text_field :last_name %>
+      <%= f.text_field :last_name, class: 'form-control' %>
       <%= f.label :email %>
       <%= f.text_field :email, class: 'form-control' %>
       <%= f.label :password %>
-      <%= f.password_field :password %>
+      <%= f.password_field :password, class: 'form-control' %>
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-      <%= f.submit "Submit" %>
+      <%= f.submit "Submit", class: 'btn btn-primary' %>
     
     <% end %>
     </div>
